fixed datepicked z-index and date disable

--- a/www/css/styles-ui2.css
+++ b/www/css/styles-ui2.css
@@ -273,6 +273,10 @@ display: none;
 	font-size: 0;
 }
 
+.ui-datepicker-unselectable, .ui-state-disabled {
+	color: #999;
+} 
+
 /* RTL support */
 .ui-datepicker-rtl {
 	direction: rtl;
